--- a/css/cart.css
+++ b/css/cart.css
@@ -1,8 +1,7 @@
 html{ scroll-behavior: smooth;}
-body{background-image: url(../images/backgrounds/homeBg.jpg);
+body{background-image: url(../images/backgrounds/cartBg.jpg);
 background-size:120%;
 background-repeat: repeat;}
-
 #navBar{display: flex;flex-direction:row;justify-content: space-around;}
 .navBarItems{flex-basis: 16.5%; background: rgba(255, 255, 255, 0.9)  ;transition: 1s;    box-shadow: 2px 2px 13px 6px black;
     display: inline-block; text-align: center;font-family: Verdana, Geneva, Tahoma, sans-serif;font-size: 18px;}
@@ -12,71 +11,41 @@ background-repeat: repeat;}
         display: inline-block; text-align: center;font-family: Verdana, Geneva, Tahoma, sans-serif;font-size: 18px;}
         #navBarCart a{color: white; text-decoration: none;}
         #navBarCart:hover{border:  solid black 3px ;transform: scale(1.1); text-decoration: underline;}
-    #welcomeInfo
-        {    background-color: rgba(255, 235, 205, 0.37);
-            align-content: center;
-            justify-content: center;
-            font-size: 18px;
+        #cartArea{background-color: rgba(255, 235, 205, 0.37);  ;align-content: center;justify-content: center;
+            font-size: 18px; text-align: center;
+           filter: contrast(300%);}
+      
+        #cartWelcomeH1{
+            background: linear-gradient(black,rgba(128, 128, 128));
+            color: white;
             text-align: center;
-            filter: contrast(300%);
-           }
-        
-#welcomeH1{
-    background: linear-gradient(180deg,rgba(0, 0, 255, 1),rgba(128, 128, 128, 0.5));
-    color: rgba(255, 255, 255);
-    text-align: center;
-    position: relative;
-    font-size: 30px;
-}
+            position: relative;
+            font-size: 30px;
+        }
+        #amountToPay{text-decoration: underline;}
 
-#logo{transition: 0.5s linear;}
-
-#logo:hover{transform: rotate(15deg);}
-
-#welcomeP{text-align: center;
-font-size: 25px;
-color: white;
-background: rgba(0, 0, 0, 0.6);}
-
-
-#cartItems{
-    background: linear-gradient(white,grey);
-font-size: 24px;
-font-weight: bolder;
-    border: 1px black solid;
-    border-radius: 20%;
-}
-
-#cartLocaction{position: fixed;background: rgba(255, 255, 255,0.750);width: 80px;transition: ease-in-out 1s; height: 87px; bottom: 10%;z-index: 5;}
-
-#toCart{font-weight: bolder;
-font-size: 14.3px;
-color: black;
-border: solid black 1px;
-background: linear-gradient(white,grey);}
-
-#displayImages{background: rgba(128, 128, 128, 0.973);text-align: center;display: flex; flex-wrap: wrap;
-justify-content: space-around;}
-
-#images1{position: relative; top: 4%;}
-#changingImages {font-weight: bolder;
-font-size: 22px;
-color: white;
-background:rgba(0, 0, 0, 0.37);
-width: 20%;}
-
-
+#tableArticle{ background-color: rgba(0, 0, 0,0.9);  ;align-content: center;justify-content: center;
+    font-size: 18px; text-align: center;
+   filter: contrast(300%);}
+   #cartTable{color: white;margin-left: auto;margin-right: auto;width: 60%;}
+   #cartTable th,td,tr{border: solid white 2px;margin-left: auto;margin-right: auto;font-size: 25px;}
+   #newCartTable{color: white;margin-left: auto;margin-right: auto;width: 60%;}
+   #newCartTable th,td,tr{border: solid white 2px;margin-left: auto;margin-right: auto;}
+.removeProduct{text-align: center;}
+   #payForCart{background-color: black;  ;align-content: center;justify-content: center;
+    font-size: 18px; text-align: center;
+color: white;}
+#clickToPay{transition: ease-in-out 1s;background: blue;color: white;margin-bottom: 15px;font-weight: bolder;}
+#clickToPay:hover{transform: scale(1.5);}
 #FotterNav1 ul {display: flex; flex-direction: row; flex-wrap: wrap;
     justify-content: space-around;background-color: rgba(0, 0, 0, 0.9); height: 60px;
 text-align: center;
 font-size: 22px;}
     #FotterNav1{filter: saturate(4);
     color: white;}
-
     
           .Bottomnav1{display: inline;flex-basis: 18%;font-weight: bolder; border-radius: 15px ;border-left: 3px solid black ; transition: 1s; border-right: solid black 3px; border-top:3px solid black; border-bottom:  solid black 3px;  box-shadow: 2px 2px 13px 6px black}
-       
-     
+            
               
           .Footer1Img{position: relative; top: 11px;transition: 1s;}
          
