--- a/css/workTools.css
+++ b/css/workTools.css
@@ -161,7 +161,7 @@ body {
     transform: scale(1.2);
 }
 #FotterNav1 ul {display: flex; flex-direction: row; flex-wrap: wrap;
-    justify-content: space-around;background-color: rgba(0, 0, 0, 0.9); height: 60px;
+    justify-content: space-around;background-color: rgba(16, 1, 128, 0.9); height: 60px;
 text-align: center;
 font-size: 22px;}
     #FotterNav1{filter: saturate(4);
@@ -173,3 +173,37 @@ font-size: 22px;}
           .Footer1Img{position: relative; top: 11px;transition: 1s;}
          
           .Bottomnav1:hover{transform: scale(1.1);}
+
+          @media screen and (min-width:0px) and (max-width:426px){
+              #navBar{position: relative;RIGHT: 40px; width: 100%;}
+              .navBarItems{margin: 2px;box-shadow: none;border:  solid black 2px;}
+              .workToolsArticle{width: 90%;}
+              .productImg{width: 100%;}
+              
+ #FotterNav1 {filter: saturate(2);position: relative; right: 5px;}
+ #fotterNav1 li{position: relative; left:10px;}
+ #FotterNav1 span{display: none;}
+          }
+
+
+          @media screen  and (min-width:426px) and (max-width:768px){
+            #navBar{position: relative;RIGHT: 40px; width: 100%;}
+            .navBarItems{margin: 2px;box-shadow: none;border:  solid black 2px;}
+            .workToolsArticle{width: 49%;}
+            .productImg{width: 100%;}
+            
+#FotterNav1 {filter: saturate(2);position: relative; right: 5px;}
+#fotterNav1 li{position: relative; left:10px;}
+#FotterNav1 span{display: none;}
+          }
+
+          @media screen and (min-width:769px) and (max-width:1025px) {
+            #navBar{position: relative;RIGHT: 40px; width: 100%;}
+            .navBarItems{margin: 2px;box-shadow: none;border:  solid black 2px;}
+            .workToolsArticle{width: 30%;}
+            .productImg{width: 100%;}
+            
+#FotterNav1 {filter: saturate(2);position: relative; right: 5px;}
+#fotterNav1 li{position: relative; left:10px;}
+#FotterNav1 span{display: none;} 
+          }
