--- a/css/TvsAndConsoles.css
+++ b/css/TvsAndConsoles.css
@@ -170,6 +170,9 @@ body {
 .addToTheCart:hover {
     transform: scale(1.2);
 }
+#payForCart{background-color: black;  ;align-content: center;justify-content: center;
+    font-size: 18px; text-align: center;
+color: white;}
 
 #FotterNav1 ul {
     display: flex;
