--- a/css/food.css
+++ b/css/food.css
@@ -169,6 +169,10 @@ body {
     transform: scale(1.2);
 }
 
+#payForCart{background-color: black;  ;align-content: center;justify-content: center;
+    font-size: 18px; text-align: center;
+color: white;}
+
 #FotterNav1 ul {
     display: flex;
     flex-direction: row;
