--- a/css/workTools.css
+++ b/css/workTools.css
@@ -160,6 +160,9 @@ body {
 .addToTheCart:hover {
     transform: scale(1.2);
 }
+#payForCart{background-color: black;  ;align-content: center;justify-content: center;
+    font-size: 18px; text-align: center;
+color: white;}
 #FotterNav1 ul {display: flex; flex-direction: row; flex-wrap: wrap;
     justify-content: space-around;background-color: rgba(16, 1, 128, 0.9); height: 60px;
 text-align: center;
